8.3.2/components/title.mdx
---
description: Компонент для отображения заголовков страниц и крупных секций интерфейса.
tags: heading
---

<Overview group="typography" forcedPath="components/Typography/Title/Title.tsx">

# Title [tag:component]

Компонент для отображения заголовков страниц и крупных секций интерфейса.

</Overview>

{/* @example-description: Три уровня Title для сравнения размеров. */}
<Playground>
  ```jsx
  <Flex direction="column">
    <Title level="1">Title уровень 1</Title>
    <Title level="2">Title уровень 2</Title>
    <Title level="3">Title уровень 3</Title>
  </Flex>
  ```
</Playground>

## Свойства и методы [#api]

| Свойство | Тип | По умолчанию | Описание |
| --- | --- | --- | --- |
| `align` | `"start" \| "center" \| "end"` | `-` | Выравнивание текста. Не имеет эффекта при inline={true}. |
| `Component` | `ElementType<any, keyof IntrinsicElements>` | `span` |  |
| `getRootRef` | `Ref<HTMLElement>` | `-` |  |
| `inline` | `boolean` | `false` | Делает блок инлайновым. |
| `level` | `"1" \| "2" \| "3"` | `1` | Уровень заголовка (от 1 до 3). |
| `normalize` | `boolean` | `true` | Убирает внешние отступы. |
| `useAccentWeight` | `boolean` | `-` | Включает акцентный тип начертания шрифта. Используются токены fontWeightAccent[1, 2, 3] Используется только вместе с `weight`. |
| `weight` | `"1" \| "2" \| "3"` | `-` | Задаёт начертание шрифта, отличное от стандартного. |

